# VOFA

./: .gitignore  README.md
CPP_API/: CMakeLists.txt  main.cpp
CPP_API/doc/: 协议格式.md  转为C语言接口.md
CPP_API/vofa_protocol/: vofa_protocol.cpp  vofa_protocol.hpp
C_API/: CMakeLists.txt  main.c
C_API/doc/: 协议结构.md  工程结构.md
C_API/vofa_protocol/: vofa_protocol.c  vofa_protocol.h
